[package]
name = "accelerometer_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.7.0" # 必須クレート
panic-halt = "0.2" # 必須クレート
embedded-graphics = "0.7.1" # 描画 0.8.0 だと displayを渡せない
micromath = "2.0.0" # ベクトル等
ryu = "1.0.15" # float型をstr型に変換する