[package]
name = "buzzer_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.7.0" # 必須クレート
panic-halt = "0.2" # 必須クレート

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
