[package]
name = "flash_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.7.0" # 必須クレート
panic-halt = "0.2" # 必須クレート
heapless = "0.7.16" # スタック上でヒープデータを取り扱う
embedded-graphics = "0.7.1" # 描画 0.8.0 だと displayを渡せない
bitfield = "0.14.0" # bit field 生成マクロ
cortex-m = "0.7.3" # 内臓マイク等の非同期機器(?)

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
