[package]
name = "sd_card_read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.7.0" # 必須クレート
panic-halt = "0.2" # 必須クレート
embedded-graphics = "0.7.1" # 描画 0.8.0 だと displayを渡せない
heapless = "0.7.16" # スタック上でヒープデータを取り扱う
embedded-sdmmc = "0.3.0" # SDカード.
# SdMmcError が 0.5.0 で削除された.
# SDCardController が 0.4.0 で削除された
